crates/test-files/fixtures/compile_errors/issue_451.fe
contract o {
    pub fn bar(x: u256, y: u256) -> bool {
        return
    }

    pub fn bar() {
        s
    }
}
